Update README.md
Updated README for extended iksoks-game